<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/v_menu_top_profile_link"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/top_menu_profile"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/v_menu_top_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/top_menu_settings"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/v_menu_top_ltheme"
        android:title="@string/top_menu_lTheme"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/v_menu_top_dtheme"
        android:title="@string/top_menu_dTheme"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/v_menu_top_more"
        android:title="@string/top_menu_more"
        app:showAsAction="withText" />

</menu>